use sun.misc.Unsafe instead of jdk.internal.misc.Unsafe for defineClass